correct mistakes validator

--- a/index.html
+++ b/index.html
@@ -678,172 +678,172 @@
                   <div class="accordion-body">
                     <ul class="tabs-nav list-reset flex">
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="one">
-                          <a href="#one">
+                        <a href="#one" class="tabs-nav__btn " data-path="one">
+                          <!-- <a href="#one"> -->
                             Бенедетто&nbsp;ди&nbsp;Биндо
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Бергоньоне,&nbsp;Амброджо
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Биссоло,&nbsp;Франческо
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="four">
-                          <a href="#four">
+                        <a href="#four" class="tabs-nav__btn" data-path="four">
+                          <!-- <a href="#four"> -->
                             Больтраффио,&nbsp;Джованни
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Бонсиньори,&nbsp;Франческо
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Боттичини,&nbsp;Рафаэлло
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="seven">
-                          <a href="#seven">
+                        <a href="#seven" class="tabs-nav__btn" data-path="seven">
+                          <!-- <a href="#seven"> -->
                             Брамантино
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Бреа,&nbsp;Людовико
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Бьяджо&nbsp;д’Антонио&nbsp;Туччи
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="ten">
-                          <a href="#ten">
+                        <a href="#ten" class="tabs-nav__btn" data-path="ten">
+                          <!-- <a href="#ten"> -->
                             Веккьетта
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Андреа&nbsp;Верроккьо
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset btn tabs-nav__btn--active work-btn" data-path="twelve">
-                          <a href="#twelve">
+                        <a href="#twelve" class="tabs-nav__btn tabs-nav__btn--active work-btn" data-path="twelve">
+                          <!-- <a href="#twelve"> -->
                             Доменико&nbsp;Гирландайо
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Беноццо&nbsp;Гоццоли
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Граначчи,&nbsp;Франческо
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Грегорио&nbsp;ди&nbsp;Чекко
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Джованни&nbsp;да&nbsp;Удине
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Джованни&nbsp;ди&nbsp;Паоло
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Джорджоне
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Парентино,&nbsp;Бернардо
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Пезеллино
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Пьетро&nbsp;Перуджино
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Перуцци,&nbsp;Бальдассаре
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Пизанелло
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                       <li class="tabs-nav__item">
-                        <button class="tabs-nav__btn btn-reset" data-path="empty">
-                          <a href="#empty">
+                        <a href="#empty" class="tabs-nav__btn" data-path="empty">
+                          <!-- <a href="#empty"> -->
                             Пинтуриккьо
-                          </a>
-                        </button>
+                          <!-- </a> -->
+                        </a>
                       </li>
                     </ul>
                   </div>
@@ -1189,6 +1189,7 @@
 
     <section class="section contacts" id="contacts">
       <div class="container">
+        <h2 class="invisible-title">1</h2>
         <div class="contacts__top flex">
           <div class="contacts__address">
             <span class="contacts__subtitle">Шоурум № 4</span>
@@ -1275,7 +1276,7 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content cont">
         <div class="modal-header">
-          <h4 class="modal-title" id="ModalLabel"></h4>
+          <h4 class="invisible-title modal-title" id="ModalLabel">1</h4>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
         </div>
         <div class="modal-body">
@@ -1302,7 +1303,7 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content cont">
         <div class="modal-header">
-          <h4 class="modal-title" id="ModalLabel"></h4>
+          <h4 class="invisible-title modal-title" id="ModalLabel">1</h4>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
         </div>
         <div class="modal-body">
@@ -1328,7 +1329,7 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content cont">
         <div class="modal-header">
-          <h4 class="modal-title" id="ModalLabel"></h4>
+          <h4 class="invisible-title modal-title" id="ModalLabel">1</h4>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
         </div>
         <div class="modal-body">
@@ -1353,7 +1354,7 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content cont">
         <div class="modal-header">
-          <h4 class="modal-title" id="ModalLabel"></h4>
+          <h4 class="invisible-title modal-title" id="ModalLabel">1</h4>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
         </div>
         <div class="modal-body">
@@ -1378,7 +1379,7 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content cont">
         <div class="modal-header">
-          <h4 class="modal-title" id="ModalLabel"></h4>
+          <h4 class="invisible-title modal-title" id="ModalLabel">1</h4>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
         </div>
         <div class="modal-body">
@@ -1403,7 +1404,7 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content cont">
         <div class="modal-header">
-          <h4 class="modal-title" id="ModalLabel"></h4>
+          <h4 class="invisible-title modal-title" id="ModalLabel">1</h4>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
         </div>
         <div class="modal-body">
