--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
             </button>
             <div class="search__dropdown dropdown">
-              <div data-simplebar class="dropdown__simplbar">
+              <div data-simplebar data-simplebar-auto-hide="false" data-simplebar-scrollbar-max-size="28" class="dropdown__simplbar">
                 <ul class="dropdown__list list-reset">
                   <li class="dropdown__item">
                     <button class="dropdown__btn dropdown__item-1-1 dropdown__item-1-1-static btn-reset">
@@ -179,7 +179,7 @@
 
             </button>
             <div class="search__dropdown dropdown">
-              <div data-simplebar class="dropdown__simplbar">
+              <div data-simplebar data-simplebar-auto-hide="false" data-simplebar-scrollbar-max-size="28"  class="dropdown__simplbar">
                 <ul class="dropdown__list list-reset">
                   <li class="dropdown__item">
                     <button class="btn-reset dropdown__btn dropdown__item-2-1 dropdown__item-2-1-static">
@@ -233,7 +233,7 @@
 
             </button>
             <div class="search__dropdown dropdown">
-              <div data-simplebar class="dropdown__simplbar">
+              <div data-simplebar data-simplebar-auto-hide="false" data-simplebar-scrollbar-max-size="28"  class="dropdown__simplbar">
                 <ul class="dropdown__list list-reset">
                   <li class="dropdown__item">
                     <button class="btn-reset dropdown__btn dropdown__item-3-1 dropdown__item-3-1-static">
@@ -287,7 +287,7 @@
 
             </button>
             <div class="search__dropdown dropdown">
-              <div data-simplebar class="dropdown__simplbar">
+              <div data-simplebar data-simplebar-auto-hide="false" data-simplebar-scrollbar-max-size="28"  class="dropdown__simplbar">
                 <ul class="dropdown__list list-reset">
                   <li class="dropdown__item">
                     <button class="btn-reset dropdown__btn dropdown__item-4-1 dropdown__item-4-1-static">
@@ -341,7 +341,7 @@
 
             </button>
             <div class="search__dropdown dropdown">
-              <div data-simplebar class="dropdown__simplbar">
+              <div data-simplebar data-simplebar-auto-hide="false" data-simplebar-scrollbar-max-size="28"  class="dropdown__simplbar">
                 <ul class="dropdown__list list-reset">
                   <li class="dropdown__item">
                     <button class="btn-reset dropdown__btn dropdown__item-5-1 dropdown__item-5-1-static">
